--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "dotenv": "^17.2.4",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mongodb": "^7.1.0",
+    "mongodb": "^3.1.6",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
